css/flixstack-popup.css
body {
  width: 320px;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
  font-weight: 300;
  margin: 0;
  color: #0D0D0D;
}

/**
 * Header
 */
header {
  background: #f5f5f5;
  border-bottom: #d5d5d5 1px solid;
  padding-top: 10px;
  padding-bottom: 10px;
  margin-bottom: 10px;
}

header .title {
  background: url(../images/header-logo.png) no-repeat;
  height: 60px;
  padding-top: 10px;
  padding-left: 80px;
  margin: 0;
}

.messages {
  border: 1px dotted #c99;
  margin-top: 10px;
  background: #fdd;
  padding: 8px;
  list-style: none;
}

/**
 * Footer
 */
footer a {
  color: #0379b5;
}

footer .login-links {
  font-size: 0.8em;
}

/**
 * Container
 */
.panel-container {
  padding-bottom: 10px;
}

/**
 * Form
 */
.form-item {
  padding-bottom:10px;
  border-bottom: 1px #d9d9d9 dotted;
  margin-bottom:10px;
}

.form-item label {
  padding-top: 8px;
}

.form-item input {
  font-size: 1.2em;
}

.submit {
  text-align: right;
  margin-bottom: 0;
  padding-bottom: 0;
  border-bottom: 0;
}

.button,
.submit input {
  background: url(../images/button.png) no-repeat;
  font-size: 1.2em;
  width: 122px;
  height:34px;
  border: none;
  font-weight: bold;
  color: #fff;
}

.button {
  text-decoration: none;
  text-align: center;
}

.button:active,
.submit input:active {
  background-image: url(../images/button-down.png);
}

/**
 * Movies to watch
 */

.logged-in.panel-container {
  padding-bottom: 0;
}

.flixstack-list ol {
  list-style: none;
  margin: 0;
  padding: 0;
}

.flixstack-list a {
  display:block;
  color: #080808;
}

.flixstack-list li .movie-entry {
  margin-bottom:10px;
}

.flixstack-list li .boxart img {
  width: 48px;
}

.flixstack-list li .movie-title {
  font-size: 1.2em;
  padding-top: 14px;
}

.flixstack-list li .shelf-toggle {
  padding-top: 24px;
}

.shelf {
  background: url(../images/drawer-top-arrow-left.png) no-repeat;
  padding-top: 14px;
  margin-bottom:10px;
}

.shelf a {
  color: #ffffff;
  text-decoration: none;
}

.shelf .content {
  background: url(../images/drawer-bg.png) no-repeat;
  height:40px;
  padding-top: 8px;
}

.shelf .content .remove {
  text-align: right;
}

.settings-toggle {
  font-size: 0.8em;
  color: #080808;
  background: url(../images/settings-icon.png) no-repeat;
  min-height:30px;
  padding-top:4px;
  padding-left:20px;
  margin-bottom:4px;
  text-align:right;
}

.flixstack-settings {
  padding-bottom: 0;
}

.flixstack-settings {
  color: #ffffff;
}

.flixstack-settings .logout {
  text-align: right;
}

.flixstack-settings .shelf {
  background-image: url(../images/drawer-top-arrow-right.png);
  margin-bottom: 0;
}

